--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -88,7 +88,10 @@
                                                     <color key="baseBackgroundColor" red="0.85975387439544515" green="0.44024412454179468" blue="0.040987997771066459" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </buttonConfiguration>
                                                 <connections>
-                                                    <segue destination="hMO-gk-DKl" kind="presentation" id="Sc8-1W-7di"/>
+                                                    <action selector="loginPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="l7q-WA-nGC"/>
+                                                    <action selector="loginTapped:" destination="tmH-sU-qUw" eventType="touchUpInside" id="9gO-LZ-Nrd"/>
+                                                    <action selector="loginTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wmB-5b-ETO"/>
+                                                    <segue destination="hMO-gk-DKl" kind="show" id="zri-Ea-cSI"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -131,11 +134,9 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <navigationItem key="navigationItem" id="Ufv-9S-aPD"/>
-                    <connections>
-                        <outlet property="loginPressed" destination="exF-Y9-dp3" id="wTm-bq-JN9"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <exit id="tmH-sU-qUw" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="949.23076923076917" y="97.393364928909946"/>
         </scene>
@@ -143,6 +144,7 @@
         <scene sceneID="1Wn-I3-sOU">
             <objects>
                 <tabBarController id="hMO-gk-DKl" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="GGY-5D-APD"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zZh-Zu-fl9">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -164,7 +166,7 @@
                     <tabBarItem key="tabBarItem" title="Item" image="mappin.and.ellipse" catalog="system" id="izx-xL-0ML"/>
                     <navigationItem key="navigationItem" id="hR3-Je-pKl"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="fIA-ZR-AXz">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="56"/>
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -180,11 +182,11 @@
             <objects>
                 <viewController id="TFr-Al-R08" customClass="MapViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VBw-Mj-Aim">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Rgh-cv-vGv">
-                                <rect key="frame" x="0.0" y="56" width="390" height="685"/>
+                                <rect key="frame" x="0.0" y="88" width="390" height="653"/>
                             </mapView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Ina-1s-7mJ"/>
@@ -296,7 +298,7 @@
                     <tabBarItem key="tabBarItem" title="Item" image="tablecells" catalog="system" id="wKP-a7-TU7"/>
                     <navigationItem key="navigationItem" id="e4n-xZ-STn"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="35j-rD-Lc1">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="56"/>
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -312,7 +314,7 @@
             <objects>
                 <tableViewController id="8gq-pB-YDs" customClass="StudentTableView" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="BSv-zu-EF8">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
@@ -331,6 +333,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="bfs-tD-oDQ"/>
+                    <connections>
+                        <outlet property="StudentTableView" destination="BSv-zu-EF8" id="VEj-g6-n6e"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fep-o4-siH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
